Enhance Flick AI to intelligently select posts to comment on: 1) Add post analysis capabilities 2) Implement PostCommentChoice class 3) Fix override annotation in SpringAiConfig 4) Remove unused isApiKeyValid method